cabal-version: 2.4
name:          xmonad-config
version:       0.1.0.0

executable xmonad-config
  main-is:          xmonad.hs
  hs-source-dirs:   .
  build-depends:
      base >= 4.14
    , xmonad >= 0.18
    , xmonad-contrib >= 0.18
    , containers >= 0.6.8
    , X11 >= 1.10.3
  default-language: Haskell2010
  ghc-options:      -Wall
