cabal-version: 3.0
name:          xmonad-config
version:       0.1.0.0

executable xmonad-config
  main-is:          xmonad.hs
  hs-source-dirs:   .
  build-depends:
      base >= 4.14
    , xmonad >= 0.18
    , xmonad-contrib >= 0.18
    , containers >= 0.6
    , X11 >= 1.10
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  ghc-options: -Wall
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wunused-packages
               -O2
